--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Arjun Jariwala</title>
+    <title>Madhavi Jariwala</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -115,20 +115,20 @@
             <div class="col-md-12 col-sm-12 text-center">
               <div class="contents">
                 <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Arjun Jariwala</h2>
+                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Madhavi Jariwala</h2>
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Full Stack Developer</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
-                    <a class="facebook" href="https://www.facebook.com/arjunjariwala94"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/madhavijariwala81"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
                     <a class="twitter" href="https://twitter.com/dc7a7823f6be4c0"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/arjun_jariwala/"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/madhavipatel07/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/arjun-jariwala/"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/jariwala-madhavi-0869a09a/"><i class="icon-social-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
@@ -157,12 +157,12 @@
                 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Arjun Jariwala</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">24 Years</span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Madhavi Jariwala</span></li>
+                  <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
                   <li><span class="pro-title"> Experience </span> <span class="pro-detail">2 Years</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Canada</span></li>
                   <li><span class="pro-title"> Location </span> <span class="pro-detail">Toronto , ON</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">arjunjariwala1994@gmail.com</span></li>
+                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">madhavi.patel.apjm@gmail.com</span></li>
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (1) 226 260 8250</span></li>
                 </ul>
               </div>
@@ -535,8 +535,7 @@
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:arjunjariwala1994@gmail.com">arjunjariwala1994@gmail.com</a></p>
-                    <p><a href="mailto:jariwala@uwindsor.ca">jariwala@uwindsor.ca</a></p>
+                    <p><a href="mailto:madhavi.patel.apjm@gmail.com">madhavi.patel.apjm@gmail.com</a></p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
@@ -574,19 +573,19 @@
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               <ul class="social-icon">
                 <li>
-                    <a class="facebook" href="https://www.facebook.com/arjunjariwala94"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/madhavipatel8"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
                     <a class="twitter" href="https://twitter.com/dc7a7823f6be4c0"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/arjun_jariwala/"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/madhavipatel07/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/arjun-jariwala/"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/jariwala-madhavi-0869a09a/"><i class="icon-social-linkedin"></i></a>
                   </li>
               </ul>
-              <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> By Arjun Jariwala</p>
+              <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> By Madhavi Jariwala</p>
             </div>
           </div>
         </div>
