--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#resume">
+                <a class="nav-link" href="https://github.com/madhavi007/MadhaviJariwala/blob/master/Madhavi%20Jariwala%20Resume-2019.pdf">
                   Resume
                 </a>
               </li>
