index file changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Arjun Jariwala</title>
+    <title>Madhavi Jariwala</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -115,20 +115,20 @@
             <div class="col-md-12 col-sm-12 text-center">
               <div class="contents">
                 <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Arjun Jariwala</h2>
+                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Madhavi Jariwala</h2>
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Full Stack Developer</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
-                    <a class="facebook" href="https://www.facebook.com/arjunjariwala94"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/madhavijariwala81"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
                     <a class="twitter" href="https://twitter.com/dc7a7823f6be4c0"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/arjun_jariwala/"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/madhavipatel07/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/arjun-jariwala/"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/jariwala-madhavi-0869a09a/"><i class="icon-social-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
@@ -157,16 +157,16 @@
                 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Arjun Jariwala</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">24 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">2 Years</span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Madhavi Jariwala</span></li>
+                  <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">3 Years</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Canada</span></li>
                   <li><span class="pro-title"> Location </span> <span class="pro-detail">Toronto , ON</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">arjunjariwala1994@gmail.com</span></li>
-                  <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (1) 226 260 8250</span></li>
+                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">madhavi.patel.apjm@gmail.com</span></li>
+                  <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (1) 6477841994</span></li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="/Madhavi Jariwala Resume-2019.pdf" class="btn btn-common" download><i class="icon-paper-clip"></i> Download Resume</a>
               <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
@@ -246,22 +246,22 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Master of Engineering In CE - University Of Windsor </h3>
-                    <span>2016 - 2018</span>
-                    <p class="line-text">Completed Master of Engineering in Computer Engineering majoring in data science and software programming. Also got the opportunity to get hand on experience on various live projects</p>
+                    <h3 class="line-title">Master of Technology Computer Science and Engineering - Christ University </h3>
+                    <span>2014 - 2016</span>
+                    <p class="line-text">Completed Master of Engineering in Computer Engineering majoring in data science and software programming.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">B.Tech In CSE - Christ University</h3>
-                    <span>2012 - 2016</span>
-                    <p class="line-text">Completed Bachelor's of Engineering in Computer Science Engineering.I was trained in major programming languages like C, C++, Java, C#, .NET, Visual Basic and many more.</p>
+                    <h3 class="line-title">Bachelor's In Computer Engineering - Atmiya University</h3>
+                    <span>2010 - 2014</span>
+                    <p class="line-text">Completed Bachelor's of Engineering in Computer Science Engineering.I was trained in major programming languages like C, C++, Java, C#, .NET, Visual Basic, PHP and many more.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">High Secondary School - Maa Bharti High School</h3>
-                    <span>2010 - 2012</span>
+                    <h3 class="line-title">High Secondary School - The School Of Science</h3>
+                    <span>2018 - 2010</span>
                     <p class="line-text">Had my first experience with computer programming world and it acted as a foundation for my software development career.</p>
                   </div>
                 </li>
@@ -277,23 +277,16 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">IT Solution Developer - TD Bank</h3>
-                    <span>Apr 2018 - Mar 2019</span>
-                    <p class="line-text">	Developed REST API endpoints in Java using the dependency management and build tool Maven, and the Spring MVC framework for communicating user data from the front-end to the database host and back</p>
+                    <h3 class="line-title">Full Stack Developer Developer - Hashvel Internet</h3>
+                    <span>Sep 2016 - May 2019</span>
+                    <p class="line-text"> worked with different technology Laravel for static and dynamic projects,Wordpress for theme and plugin devolpment,CasperJs for scripting and Node Js, worked with different databases mysql, psql, mongo db for connections, Used Bitbucket and Git Lab for code distribution and Postman for endpoint testing. </p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Customer Service Associate / Cashier - The Home Depot</h3>
-                    <span>Mar 2017 - Feb 2018</span>
-                    <p class="line-text">Worked as Customer Service Associate / Cashier completing transactions using the POS system and also	coordinated with a team of associates to provide exceptional customer service</p>
-                  </div>
-                </li>
-                <li>
-                  <div class="content-text">
-                    <h3 class="line-title">Web Developer - Christ University</h3>
-                    <span>Jan 2015 - May 2015</span>
-                    <p class="line-text">Learned Adobe Photoshop, Adobe Illustrator and Adobe Dreamweaver and also	gained experience managing and co-ordinating a team of developers</p>
+                    <h3 class="line-title">Lab Assistant - Christ University</h3>
+                    <span>OCT 2015 - April 2016</span>
+                    <p class="line-text">Worked as Lab Assistant to guide and evaluate Juniors in coding.</p>
                   </div>
                 </li>
               </ul>
@@ -535,22 +528,14 @@
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:arjunjariwala1994@gmail.com">arjunjariwala1994@gmail.com</a></p>
-                    <p><a href="mailto:jariwala@uwindsor.ca">jariwala@uwindsor.ca</a></p>
+                    <p><a href="mailto:madhavi.patel.apjm@gmail.com">madhavi.patel.apjm@gmail.com</a></p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
                       <i class="fa fa-phone"></i>
                     </div>
-                    <p><a href="#">+ (1) 226 260 8250</a></p>
+                    <p><a href="#">+ (1) 2477841994</a></p>
                   </div>
-                  <div class="single-contact">
-                      <div class="contact-icon">
-                        <i class="fa fa-whatsapp"></i>
-                      </div>
-                      <p><a href="#">+ (1) 226 260 8250</a></p>
-                      <p><a href="#">+ (91) 9900 540 896</a></p>
-                    </div>
                   </div>
                 </div>
                 
@@ -574,19 +559,19 @@
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               <ul class="social-icon">
                 <li>
-                    <a class="facebook" href="https://www.facebook.com/arjunjariwala94"><i class="icon-social-facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/madhavipatel8"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
                     <a class="twitter" href="https://twitter.com/dc7a7823f6be4c0"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/arjun_jariwala/"><i class="icon-social-instagram"></i></a>
+                    <a class="instagram" href="https://www.instagram.com/madhavipatel07/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/arjun-jariwala/"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/jariwala-madhavi-0869a09a/"><i class="icon-social-linkedin"></i></a>
                   </li>
               </ul>
-              <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> By Arjun Jariwala</p>
+              <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> By Madhavi Jariwala</p>
             </div>
           </div>
         </div>
