--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                   Resume
                 </a>
               </li>
-              <li class="nav-item">
+              <!--<li class="nav-item">
                 <a class="nav-link" href="#portfolios">
                   Work
                 </a>
-              </li>
+              </li>-->
               <li class="nav-item">
                 <a class="nav-link" href="#contact">
                   Contact
@@ -96,9 +96,9 @@
           <li>
             <a href="#resume">resume</a>
           </li>
-          <li>
+          <!--<li>
             <a href="#portfolio">Work</a>
-          </li>
+          </li>-->
           <li>
             <a href="#contact">Contact</a>
           </li>
@@ -188,7 +188,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="#">Front-end Development</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <p>Convert PSD pages to website using HTML,CSS,JAVASCRIPT</p>
               </div>
             </div>
           </div>
@@ -199,8 +199,8 @@
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Graphic Design</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">Back-end Development</a></h3>
+                <p>Using Laravel, NodeJs, Wordpress Theme Development</p>
               </div>
             </div>
           </div>
@@ -211,8 +211,8 @@
                 <i class="icon-briefcase"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Business Branding</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">Deploy Code to Server</a></h3>
+                <p>Setup Nginx,Git and Install desired software</p>
               </div>
             </div>
           </div>
@@ -223,8 +223,8 @@
                 <i class="icon-bubbles"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Consultancy</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <h3><a href="#">Scripting</a></h3>
+                <p>Using Casperjs scraps data and store in database using API.</p>
               </div>
             </div>
           </div>
@@ -246,7 +246,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Master of Technology Computer Science and Engineering - Christ University </h3>
+                    <h3 class="line-title">Master's In Computer Science and Engineering - Christ University </h3>
                     <span>2014 - 2016</span>
                     <p class="line-text">Completed Master of Engineering in Computer Engineering majoring in data science and software programming.</p>
                   </div>
@@ -286,7 +286,7 @@
                   <div class="content-text">
                     <h3 class="line-title">Lab Assistant - Christ University</h3>
                     <span>OCT 2015 - April 2016</span>
-                    <p class="line-text">Worked as Lab Assistant to guide and evaluate Juniors in coding.</p>
+                    <p class="line-text">Worked as Lab Assistant to guide Juniors and evaluate their code.</p>
                   </div>
                 </li>
               </ul>
@@ -298,7 +298,7 @@
     <!-- Resume Section End -->
 
     <!-- Portfolio Section -->
-    <section id="portfolios" class="section-padding">
+    <section id="portfolios" class="section-padding" style="display:none">
       <!-- Container Starts -->
       <div class="container">        
         <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My Remarkable Works</h2>
