--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Master's In Computer Science and Engineering - Christ University </h3>
+                    <h3 class="line-title" style="line-height: 1rem;">Master's In Computer Science and Engineering - Christ University </h3>
                     <span>2014 - 2016</span>
                     <p class="line-text">Completed Master of Engineering in Computer Engineering majoring in data science and software programming.</p>
                   </div>
