--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi Guys!</h3>
-              <p>Not your average Software Engineer. My work experiences stretch across different sectors of the industry. I'm driven by challenges and am always seeking to learn. Dedicated, Passionate, Reliable and motivated individual. I have a simple aspiration - Become A Leader. I'm open arms to opportunities that will broaden my horizon. My passion is to contribute, support and make a difference. I will leave a mark.
+              <p>Not an average Software Engineer.My work experiences stretch across various industry sectors.Challenges drive me and I'm always trying to learn. I am individual dedicated, passionate, trusted and motivated.I've got a simple aspiration-to be a leader. I am open to opportunities that expand my horizon. My passion is helping, supporting, and making a difference 
                 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
@@ -534,7 +534,7 @@
                     <div class="contact-icon">
                       <i class="fa fa-phone"></i>
                     </div>
-                    <p><a href="#">+ (1) 2477841994</a></p>
+                    <p><a href="#">+ (1) 6477841994</a></p>
                   </div>
                   </div>
                 </div>
