--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Full Stack Developer Developer - Hashvel Internet</h3>
+                    <h3 class="line-title">Full Stack Developer - Hashvel Internet</h3>
                     <span>Sep 2016 - May 2019</span>
                     <p class="line-text"> worked with different technology Laravel for static and dynamic projects,Wordpress for theme and plugin devolpment,CasperJs for scripting and Node Js, worked with different databases mysql, psql, mongo db for connections, Used Bitbucket and Git Lab for code distribution and Postman for endpoint testing. </p>
                   </div>
