--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
                   <div class="content-text">
                     <h3 class="line-title">Full Stack Developer - Hashvel Internet</h3>
                     <span>Sep 2016 - May 2019</span>
-                    <p class="line-text"> worked with different technology Laravel for static and dynamic projects,Wordpress for theme and plugin devolpment,CasperJs for scripting and Node Js, worked with different databases mysql, psql, mongo db for connections, Used Bitbucket and Git Lab for code distribution and Postman for endpoint testing. </p>
+                    <p class="line-text"> worked with different technology such as Laravel for static and dynamic projects,Wordpress for theme and plugin devolpment,CasperJs for scripting and Node Js, worked with different databases mysql, psql, mongo db for connections, Used Bitbucket and Git Lab for code distribution and Postman for endpoint testing. </p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">Lab Assistant - Christ University</h3>
-                    <span>OCT 2015 - April 2016</span>
+                    <span>Oct 2015 - April 2016</span>
                     <p class="line-text">Worked as Lab Assistant to guide Juniors and evaluate their code.</p>
                   </div>
                 </li>
