--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   <div class="content-text">
                     <h3 class="line-title">Lab Assistant - Christ University</h3>
                     <span>Oct 2015 - April 2016</span>
-                    <p class="line-text">Worked as Lab Assistant to guide Juniors and evaluate their code.</p>
+                    <p class="line-text"> coordinate students and teachers for various activities, meetings, and/or events. Perform basic computer troubleshooting, including course specific software.</p>
                   </div>
                 </li>
               </ul>
