--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi Guys!</h3>
-              <p>Not an average Software Engineer.My work experiences stretch across various industry sectors.Challenges drive me and I'm always trying to learn. I am individual dedicated, passionate, trusted and motivated.I've got a simple aspiration-to be a leader. I am open to opportunities that expand my horizon. My passion is helping, supporting, and making a difference 
+              <p>Not an average Software Engineer.My work experiences stretch across various industry sectors.Challenges drive me and I'm always trying to learn. I am individual dedicated, passionate, trusted and motivated.I've got a simple aspiration-to be a leader. I am open to opportunities that expand my horizon. My passion is helping, supporting, and making a difference. 
                 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
@@ -246,21 +246,21 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title" style="line-height: 1rem;">Master's In Computer Science and Engineering - Christ University </h3>
+                    <h3 class="line-title" style="line-height: 1rem;">Master's In Computer Science and Engineering - Christ University, Bangalore India </h3>
                     <span>2014 - 2016</span>
                     <p class="line-text">Completed Master of Engineering in Computer Engineering majoring in data science and software programming.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Bachelor's In Computer Engineering - Atmiya University</h3>
+                    <h3 class="line-title">Bachelor's In Computer Engineering - Atmiya University, Rajkot India</h3>
                     <span>2010 - 2014</span>
                     <p class="line-text">Completed Bachelor's of Engineering in Computer Science Engineering.I was trained in major programming languages like C, C++, Java, C#, .NET, Visual Basic, PHP and many more.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">High Secondary School - The School Of Science</h3>
+                    <h3 class="line-title">High Secondary School - The School Of Science, Rajkot India</h3>
                     <span>2018 - 2010</span>
                     <p class="line-text">Had my first experience with computer programming world and it acted as a foundation for my software development career.</p>
                   </div>
@@ -277,14 +277,14 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Full Stack Developer - Hashvel Internet</h3>
+                    <h3 class="line-title">Full Stack Developer - Hashvel Internet, Rajkot India</h3>
                     <span>Sep 2016 - May 2019</span>
                     <p class="line-text"> worked with different technology such as Laravel for static and dynamic projects,Wordpress for theme and plugin devolpment,CasperJs for scripting and Node Js, worked with different databases mysql, psql, mongo db for connections, Used Bitbucket and Git Lab for code distribution and Postman for endpoint testing. </p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Lab Assistant - Christ University</h3>
+                    <h3 class="line-title">Lab Assistant - Christ University, Bangalore India</h3>
                     <span>Oct 2015 - April 2016</span>
                     <p class="line-text"> coordinate students and teachers for various activities, meetings, and/or events. Perform basic computer troubleshooting, including course specific software.</p>
                   </div>
@@ -441,14 +441,14 @@
           <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.3s">
-              <div class="icon"><i class="fa fa-cutlery" aria-hidden="true"></i></div>
+              <div class="icon"><i class="fa fa-code" aria-hidden="true"></i></div>
               <p>Coding</p>
             </div>
           </div>
           <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.6s">
-               <div class="icon"><i class="fa fa-code"></i></div> 
+               <div class="icon"><i class="fa fa-cutlery"></i></div> 
               <p>Cooking</p>
             </div>
           </div>
