--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Bachelor's In Computer Engineering - Atmiya University, Rajkot India</h3>
+                    <h3 class="line-title" style="line-height: 1rem;">Bachelor's In Computer Engineering - Atmiya University, Rajkot India</h3>
                     <span>2010 - 2014</span>
                     <p class="line-text">Completed Bachelor's of Engineering in Computer Science Engineering.I was trained in major programming languages like C, C++, Java, C#, .NET, Visual Basic, PHP and many more.</p>
                   </div>
