--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (1) 6477841994</span></li>
                 </ul>
               </div>
-              <a href="/Madhavi Jariwala Resume-2019.pdf" class="btn btn-common" download><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="/Madhavi Jariwala CV 2019.pdf" class="btn btn-common" download><i class="icon-paper-clip"></i> Download Resume</a>
               <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
